Trying to fix the IAEGraph since it is not rendering on mobile view

--- a/frontend/src/components/statistics/income-vs-expense/IncomeVSExpense.scss
+++ b/frontend/src/components/statistics/income-vs-expense/IncomeVSExpense.scss
@@ -89,11 +89,12 @@
 
 @media only screen and (max-width: 800px) {
     .income-vs-expense-chart {
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        width: 100%;
+        grid-template-rows: 1fr 0.3fr 0.2fr;
     
         .chart-stats {
-            order: 2;
+            grid-column: 1/3;
             display: flex;
             flex-direction: column;
             align-items: flex-start;
@@ -101,7 +102,8 @@
         }
         
         .chart-div {
-            width: 100%;
+            grid-column: 1/3;
+            grid-row: 1/2;
             .pie-chart {
                 margin: 0 auto;
                 padding-right: 40px;
@@ -109,7 +111,7 @@
         }
     
         .chart-btn-holder {
-            order: 3;
+            grid-column: 1/3;
             padding: 1em 0 1em 0;
         }
     }
